<?xml version="1.0" encoding="utf-8"?>
<!--DataBinding을 이용하기 위해서는 반드시 layout으로 감싸주어야 한다.-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--DataBinding을 이용하여 데이터를 실시간으로 감지 및 변경을 하기 위해서는 아래와 같이 세팅을 해주어야한다.-->
    <!--<data>
        <variable
            name="ConnectViewModel"
            type="com.example.kanbu.ConnectViewModel" />
    </data>-->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0D039BE5">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:padding="10dp"
        android:text="@string/connection_method"
        android:textColor="@color/white"
        android:textSize="20dp"/>


    <TextView
        android:id="@+id/tv_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bluetooth"
        android:textSize="15dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000"/>

    <TextView
        android:id="@+id/tv_bluetooth_le_4_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bluetooth_le_4_0"
        android:textSize="15dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000"/>

    <TextView
        android:id="@+id/tv_wi_fi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/wi_fi"
        android:textSize="15dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:padding="10dp"
        android:text="@string/Connection_settings"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tv_Protocol_and_Data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/Protocol_and_Data"
        android:textSize="15dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:padding="10dp"
        android:text="@string/Registered_devices"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Registered_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:padding="10dp"
        android:text="@string/Connectable_devices"
        android:textColor="@color/white"
        android:textSize="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Connectable_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
</layout>