<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#0D039BE5">

    <!--todo 1행 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ln_main_monitoring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:onClick="moveFragment">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/main_monitoring" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitoring"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_main_diagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:onClick="moveFragment">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/car_icon_145832" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Diagnosis"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>
    <!--todo 1행 -->


    <!--todo 2행 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ln_main_terminal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:onClick="moveFragment">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/main_terminal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminal"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_main_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:onClick="moveFragment">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/settings_cogwheel_button_icon_icons_com_72559" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>
    <!--todo 2행 -->

</LinearLayout>